REGRESSION (r128633): td changes size during re-layout of table although it shouldn't https://bugs.webkit.org/show_bug.cgi?id=102802

Patch by Julian Pastarmov <pastarmovj@chromium.org> on 2012-11-23
Reviewed by Ojan Vafai.

Source/WebCore:

The bug was caused by incorrectly rewriting a nested condition which caused the else
clause to trigger in wrong cases.

Test: fast/table/nested-tables-with-div-offset.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computePercentageLogicalHeight):
Reverted wrong combination of nested if statements.

LayoutTests:

This test checks that table layout of some nested tables in quirks mode is computed correctly.

* fast/table/nested-tables-with-div-offset-expected.txt: Added.
* fast/table/nested-tables-with-div-offset.html: Added.

Canonical link: https://commits.webkit.org/121239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135578 268f45cc-cd09-0410-ab3c-d52691b4dbfc